1、修改启动shell，增加jvm优化配置 2、修改配置文件增加tomcat连接数配置